# 324_final_project

./: DATASET.md  PROJECT_STRUCTURE.md  README.md  mask_data.py  p1_minilm.ipynb  p1_mpnet.ipynb  pyproject.toml  validate_dataset.py
data/: BJP_2019.txt  BJP_2024.txt  INC_2014.txt  INC_2019.txt  INC_2024.txt
masked_pdf_data/: BJP_2009.txt  BJP_2014.txt  BJP_2019.txt  BJP_2024.txt  INC_2009.txt  INC_2014.txt  INC_2019.txt  INC_2024.txt
processing_pipeline/: mask_data.py  preprocess.py
transformers_ipynbs/: p1_minilm.ipynb  p1_mpnet.ipynb
